<resources>
    <string name="app_name">VueJs Documentation\'s</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed !!</string>

    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">No notes found!</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="hint_enter_note">Enter your note!</string>
    <string name="long_text">This class enables generating a PDF document from native Android content. You create a new document and then for every page you want to add you start a page, write content to the page, and finish the page. After you are done with all pages, you write the document to an output stream and close the document. After a document is closed you should not use it anymore. Note that pages are created one by one, i.e. you can have only a single page to which you are writing at any given time. This class is not thread safe.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compose_shortcut_short_label1">Generate Pdf</string>
    <string name="compose_shortcut_long_label1">Create New Pdf files</string>
    <string name="compose_disabled_message1">Can\'t perform this action, button is dissabled</string>

    <string name="compose_shortcut_short_vertical">Vertical Stepper</string>
    <string name="compose_shortcut_long_vertical">Create Vertical Stepper</string>
    <string name="compose_shortcut_disabled_vertical">Vertical Stepper Dissabled</string>

    <string name="compose_shortcut_short_activita">Generate New Pdf</string>
    <string name="compose_shortcut_long_activita">Generate new Pdf Directly from the use inputs</string>
    <string name="compose_shortcut_disabled_activita">Disabled</string>


    <string name="compose_shortcut_short_dissabled">Dissabled Shortcut</string>
    <string name="compose_shortcut_long_dissabled">This shortcut is disabled</string>
    <string name="compose_shortcut_disabled_dissabled">Disabled can not receive user interactions</string>
    <string name="accessibility_description">Accessbility Descriptions</string>
    <string name="error_404">Error 404</string>
    <string name="is_your_id_correct">Is your Identity above correct?</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="your_id">Your ID</string>
    <string name="fnamelname">FirstName SecondName LastName</string>
    <string name="your_phone">Phone number 0716XXXXXX</string>
    <string name="send">send</string>
    <string name="phone_cannot_be_empty">Phone Number Cannot be empty</string>
    <string name="user_name_cannot_be_empty">User Name Cannot be Empty</string>
    <string name="do_you_have_an_id_already">Do you have an ID already ?</string>
    <string name="enter_your_own_keys">Enter your own ID</string>
    <string name="token_can_not_be_null">This can not be null or less than required length</string>
    <string name="enter_your_credentials_here">Enter your credentials here</string>

    <string name="get_your_national_identity_from_this_app">Install this app to get your national ID number and copy easly</string>
    <string name="send_to">Send to</string>
    <string name="cancel">Cancel</string>
    <string name="help_dialog">
        This application was created to simplify the prolonged process of running USSD to get User Identification Card Number
        and Open website to fill the form for getting copy. \n\n In this Application only what your are supposed to do is to fill you Details
        i.e. Firstname, Secondname and LastName and Application will do the rest for you \n \n
        <b><i>NOTE</i></b>: This application was individually created and not owned by National Identification Authority (NIDA),
        so NIDA will not be accountable for any problems or difficulties with this application.
    Also application does not collect any user sensitive information except application analytics itself for moreDayNight.DarkActionBar improvements. </string>
    <string name="help_title">About this application</string>
    <string name="language">Languages</string>
    <string name="lan_en">English</string>
    <string name="lan_sw">Kiswahili</string>
    <string name="cost_dialog_title">Charges ?</string>
    <string name="cost_dialog_message">To use this service 100Tsh  will deducted be from your phone charges. \n Are you sure you want to continue ?</string>
    <string name="ok_button">OK</string>
    <string name="notification_error_ssl_cert_invalid">Invalid SSL certificate</string>
    <string name="share_via_twitter">Share tweeter</string>
    <string name="general">General</string>
    <string name="home">Home</string>
    <string name="social_media">Social Media</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">Linkedin</string>
    <string name="youtube">YouTube</string>
    <string name="news_events">News</string>
    <string name="about">About</string>
    <string name="visit_our">Visitors</string>
    <string name="about_us">This application contain \n only links to Official Vuejs leaning  materials and communities.
     Built for simplification of materials link\'s memorization.
        There is no modification in learning materials or tutorials written or to be written by developer.
    \n\n In case you found the missing documentation feel free to contact us so as we can add it for others to read.
    Repository also is open for any pull request which seems appropriate</string>
    <string name="about_this_app">About this App</string>
    <string name="licence_agreements">Licence Agreements</string>
    <string name="custom_license_title">Licence Agreements</string>


    <string-array name="language_array">
        <item>Change Languages</item>
        <item>English</item>
        <item>Kiswahili</item>
    </string-array>


</resources>
